--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -35,8 +35,8 @@
                     
                     <img src="/img/lg2.png" alt="Site logo" width="125" height="125"  >
                 </div>
-                <div class="col-sm-10 col-xs-8 col-md-11 col-lg-11">
-                    <center>
+                <div class="col-sm-8 col-xs-6 col-md-9 col-lg-9 ">
+                    <center> 
                         <h1 style="color: #ffffff"><b>STUDENTS' WELFARE ASSOCIATION</b></h1>
                         <h5 style="color: #ffffff"><p>GOVERNMENT COLLEGE OF ENGINEERING AND LEATHER TECHNOLOGY</p></h5>
                         <samp style="color: #ffffff"><p>Email id-swa.gcelt@gmail.com   wwww.https://gcelt.gov.in/</p></samp>
@@ -44,10 +44,24 @@
                         <samp style="color: #ffffff"><p>Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961.</p></samp>
                     </center>
                 </div>
+                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
+                    <center>
+                        <p>
+                         <h4> <a href="/register_page" style="color: #ffffff">Register</a> </h4>
+                        </p>    
+                    </center>
                 </div>
+                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
+                    <center>
+                        <p>
+                            <h4> <a class="active" href="/login_page" style="color: #ffffff">Log In</a> </h4>
+                        </p>    
+                    </center>
+                </div>
+
+                 </div>
             </div>
         </div>
-
         <div class="header-bg">
             <div class="container-fluid"style="color: #0a4035">
 
@@ -63,7 +77,7 @@
                                 <li><a href="/event"style="color: #ffffff" >Event</a></li>
                                 <li><a href="/union_members" style="color: #ffffff">Union Members</a></li>
                                 <li><a href="/gallery"style="color: #ffffff">Gallery</a></li>
-                                <li><a href="/student_id"style="color: #ffffff" >Student Id</a></li>
+                                <li><a href="/student_id"style="color: #ffffff" >Students</a></li>
                                 <li><a href="/rc-gcelt"style="color: #ffffff" >RC_Gcelt</a></li>
                                 <li><a href="/contact"style="color: #ffffff" class="active">contact</a></li>
                             </ul>
@@ -173,7 +187,7 @@
                                 <li><a href="/event"style="color: #ffffff" >Event</a></li>
                                 <li><a href="/union_members" style="color: #ffffff">Union Members</a></li>
                                 <li><a href="/gallery"style="color: #ffffff" class="active">Gallery</a></li>
-                                <li><a href="/student_id"style="color: #ffffff" >Student Id</a></li>
+                                <li><a href="/student_id"style="color: #ffffff" >Students</a></li>
                                 <li><a href="/rc-gcelt"style="color: #ffffff" >RC_Gcelt</a></li>
                                 <li><a href="/contact"style="color: #ffffff">contact</a></li>
                         </ul>
