--- a/views/student_id.ejs
+++ b/views/student_id.ejs
@@ -35,8 +35,8 @@
                     
                     <img src="/img/lg2.png" alt="Site logo" width="125" height="125"  >
                 </div>
-                <div class="col-sm-10 col-xs-8 col-md-11 col-lg-11">
-                    <center>
+                <div class="col-sm-8 col-xs-6 col-md-9 col-lg-9 ">
+                    <center> 
                         <h1 style="color: #ffffff"><b>STUDENTS' WELFARE ASSOCIATION</b></h1>
                         <h5 style="color: #ffffff"><p>GOVERNMENT COLLEGE OF ENGINEERING AND LEATHER TECHNOLOGY</p></h5>
                         <samp style="color: #ffffff"><p>Email id-swa.gcelt@gmail.com   wwww.https://gcelt.gov.in/</p></samp>
@@ -44,7 +44,23 @@
                         <samp style="color: #ffffff"><p>Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961.</p></samp>
                     </center>
                 </div>
+                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
+                    <center>
+                        <p>
+                         <h4> <a href="/register_page" style="color: #ffffff">Register</a> </h4>
+                        </p>    
+                        
+                    </center>
                 </div>
+                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
+                    <center>
+                        <p>
+                            <h4> <a href="/login_page" style="color: #ffffff">Log In</a> </h4>
+                        </p>    
+                    </center>
+                </div>
+
+                 </div>
             </div>
         </div>
 
@@ -63,7 +79,7 @@
                                 <li><a href="/event"style="color: #ffffff" >Event</a></li>
                                 <li><a href="/union_members" style="color: #ffffff">Union Members</a></li>
                                 <li><a href="/gallery"style="color: #ffffff">Gallery</a></li>
-                                <li><a href="/student_id"style="color: #ffffff" class="active">Student Id</a></li>
+                                <li><a href="/student_id"style="color: #ffffff" class="active">Students</a></li>
                                 <li><a href="/rc-gcelt"style="color: #ffffff" >RC_Gcelt</a></li>
                                 <li><a href="/contact"style="color: #ffffff">contact</a></li>
                             </ul>
@@ -126,61 +142,9 @@
                         <p class="justify-text">
                             <samp>There are also alumni of this institute, who are flourishing in other professions apart from CS/IT and LT. GCELT takes pride in them also, as the institute believes, the ultimate goal is to be a proper human being and do well to oneself and to the society, and the field or process for doing so may vary. And GCELT makes sure that even when the student completes his/her course and attains the degree, the will to learn is not diminished in any form. It’s a matter of a joy, till date GCELT have been successful in doing so, and for that the students of the college deserves equal credit as the institute itself.</samp>
                         </p>
-                        <center><a  class="btn-blue-gradient">Student Id Acoount</a></center>
+                        <!-- <center><a  class="btn-blue-gradient">Student Id Acoount</a></center> -->
                     </div> <!-- col-lg-12 -->
-                </div> <!-- row -->
-                <div class="row margin-bottom-30">
-                    <div class="col-lg-6 col-md-6 contact-left">
-                       <center> <h3 class="section-title-2 text-uppercase font-weight-300"><b>log in</b></h3></center>
-                        <form action="#" method="post" class="tm-contact-form">
-                            <div class="tm-contact-form">
-                                <div class="form-group">
-                                    <input type="email" id="contact_email" class="form-control" placeholder=" ENTER YOUR EMAIL ID" />
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" id="contact_subject" class="form-control" placeholder="ENTER YOUR PASSWORD " />
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" name="submit" class="text-uppercase btn-blue-gradient btn-submit">sign in</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-lg-6 col-md-6 contact-right">
-                        <center><h3 class="section-title-2 text-uppercase font-weight-300"><b>Register Now</h3></center>
-                        <form action="/signup" method="post" class="tm-contact-form">
-                            <div class="tm-contact-form">
-                                <div class="form-group">
-                                    <input type="text" id="contact_name" name="name" class="form-control" placeholder="ENTER YOUR FULL NAME" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" id="contact_email" name="email" class="form-control" placeholder="ENTER YOUR EMAIL ID" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="number" id="contact_email" name="mobile_number" class="form-control" placeholder="ENTER YOUR MOBILE NO." required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" id="contact_subject" name="stream" class="form-control" placeholder="ENTER YOUR STREAM" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="number" id="contact_name" name="passing_year" class="form-control" placeholder="ENTER YOUR PASSING YEAR" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" id="contact_email" name="password" class="form-control" placeholder="PASSWORD" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" id="contact_subject" name="confirm_password" class="form-control" placeholder="CONFIRM PASSWORD" required/>
-                                </div>
-                                <div class="form-group">
-                                    <textarea id="contact_message" name="message" class="form-control" rows="5" cols="75" placeholder="MESSAGE(OPTIONAL)"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="text-uppercase btn-blue-gradient btn-submit">sign up</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div> <!-- row -->
+                 
             </div> <!-- container -->
         </section>
         <!-- Who We Are -->
