fixed some bugs in gallery and cleaned up sign up/in

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -118,9 +118,9 @@
                         <div class="section-title-underline-blue"></div>
                          
                             <ul class="nav nav-tabs">
-                             <li class="active"><a href="gallery.html">College</a></li>
-                             <li><a href="gallery_batch.html">Students' Batch</a></li>
-                             <li><a href="gallery_program.html">All Program</a></li>
+                             <li class="active"><a href="/gallery">College</a></li>
+                             <li><a href="/gallery_batch">Students' Batch</a></li>
+                             <li><a href="/gallery_program">All Program</a></li>
                             </ul>
                     </div>
                 </div>
