--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -116,19 +116,22 @@
         <form action="/signup" method="post" class="tm-contact-form">
             <div class="tm-contact-form">
                 <div class="form-group">
-                    <input type="text" id="contact_name" name="name" class="form-control" placeholder="ENTER YOUR FULL NAME" required/>
+                    <input type="text" id="contact_name" name="name" class="form-control" placeholder="FULL NAME" required/>
                 </div>
                 <div class="form-group">
-                    <input type="email" id="contact_email" name="email" class="form-control" placeholder="ENTER YOUR EMAIL ID" required/>
+                    <input type="email" id="contact_email" name="email" class="form-control" placeholder="EMAIL ID" required/>
                 </div>
                 <div class="form-group">
-                    <input type="number" id="contact_email" name="mobile_number" class="form-control" placeholder="ENTER YOUR MOBILE NO." required/>
+                    <input type="number" id="contact_email" name="mobile_number" class="form-control" placeholder="MOBILE NO." required/>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="contact_subject" name="stream" class="form-control" placeholder="ENTER YOUR STREAM" required/>
+                    <input type="text" id="contact_profession" name="profession" class="form-control" placeholder="PROFESSION" required/>
                 </div>
                 <div class="form-group">
-                    <input type="number" id="contact_name" name="passing_year" class="form-control" placeholder="ENTER YOUR PASSING YEAR" required/>
+                    <input type="text" id="contact_subject" name="stream" class="form-control" placeholder="STREAM" required/>
+                </div>
+                <div class="form-group">
+                    <input type="number" id="contact_name" name="passing_year" class="form-control" placeholder="PASSING YEAR" required/>
                 </div>
                 <div class="form-group">
                     <input type="password" id="contact_email" name="password" class="form-control" placeholder="PASSWORD" required/>
