--- a/views/gallery_program.ejs
+++ b/views/gallery_program.ejs
@@ -59,11 +59,11 @@
                         <nav class="templatemo-nav" data-spy="affix" data-offset-top="197">
                             <ul>
                                 <li><a href="https://gcelt.gov.in/"style="color: #ffffff" >GCELT</a></li>
-                                <li><a href="/index" style="color: #ffffff">Home</a></li>
+                                <li><a href="/" style="color: #ffffff">Home</a></li>
                                 <li><a href="/event"style="color: #ffffff" >Event</a></li>
-                                <li><a href="/union members" style="color: #ffffff">Union Members</a></li>
+                                <li><a href="/union_members" style="color: #ffffff">Union Members</a></li>
                                 <li><a href="/gallery"style="color: #ffffff" class="active">Gallery</a></li>
-                                <li><a href="/student_id"style="color: #ffffff">Student Id</a></li>
+                                <li><a href="/student_id"style="color: #ffffff">Students</a></li>
                                 <li><a href="/rc-gcelt"style="color: #ffffff" >RC_Gcelt</a></li>
                                 <li><a href="/contact"style="color: #ffffff">contact</a></li>
                             </ul>
