fixed dashboard image display issues

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="profile-img">
-                        <img src=<%= profilePicture%> alt="profile photo"/>
+                        <img width="200" height="200" src=<%= profilePicture%> alt="profile photo"/>
                          
                     </div>
                 </div>
